# unnominable

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
assets/models/cube/: cube.mtl
assets/models/icosahedron/: icosahedron.mtl
assets/shaders/: debug.frag  debug.vert  fragment.glsl  generic.vert  light.frag  object.frag  object.vert  shader.frag  shader.vert  vertex.glsl
assets/shaders/object/: directional_light.frag  object.frag  object.vert  point_light.frag  spotlight.frag
assets/textures/: blank.jxl
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
lib/termstylist/: LICENSE
lib/termstylist/include/: termstylist.h
src/: log.cpp  log.hpp  main.cpp  main.hpp  math.cpp  math.hpp  model.cpp  model.hpp  objects.cpp  objects.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  types.hpp  util.cpp  util.hpp
src/world/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  planet.cpp  planet.hpp  world.hpp
